tests/baselines/reference/numberAssignableToEnum.errors.txt
numberAssignableToEnum.ts(4,5): error TS2454: Variable 'n' is used before being assigned.


==== numberAssignableToEnum.ts (1 errors) ====
    enum E { A }
    var n: number;
    var e: E;
    e = n;
        ~
!!! error TS2454: Variable 'n' is used before being assigned.
    n = e;